--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                                 class="fa-regular fa-file-pdf"></i>&nbsp;Paper</a> |
                         <a href="./assets/paper/atc19-liang/atc19-liang-slide.pdf" target="_blank"><i
                                 class="fa-regular fa-file-powerpoint"></i>&nbsp;Slides</a> |
-                        <a data-modal-action="open" data-modal-target="atc19-liang-slide"><i
-                                class="fa-regular fa-file-powerpoint"></i>&nbsp;打开模态框</a> |
+                        <!-- <a data-modal-action="open" data-modal-target="atc19-liang-slide"><i
+                                class="fa-regular fa-file-powerpoint"></i>&nbsp;打开模态框</a> | -->
                         <a href="https://www.usenix.org/conference/atc19/presentation/liang" target="_blank"><i
                                 class="fa-solid fa-clapperboard"></i>&nbsp;Talk</a> |
                         <a href="https://github.com/Cognitive-SSD/Cognitive-SSD" target="_blank"><i
@@ -100,17 +100,15 @@
                 </div>
             </div>
             <!-- Paper slide modal display -->
-            <div id="atc19-liang-slide" class="modal">
+            <!-- <div id="atc19-liang-slide" class="modal">
                 <div class="modal-content modal-normal">
                     <div class="model-title-line"><span class="close">&times;</span>
                         <h3>Slides - Cognitive SSD: A Deep Learning Engine for In-Storage Data Retrieval</h3>
                     </div>
                     <iframe src="/assets/paper/atc19-liang/atc19-liang-slide.pdf" width="100%" height="100%">
-                        This browser does not support PDFs. Please download the PDF to view it: <a
-                            href="/assets/paper/atc19-liang/atc19-liang-slide.pdf">Download PDF</a>
                     </iframe>
                 </div>
-            </div>
+            </div> -->
             <!-- Paper abstract display -->
             <div class="pub-abstract" id="atc19-liang-abstract">
                 <p id="atc19-liang-abstract-content"></p>
