--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Oswald:wght@200..700&display=swap"
         rel="stylesheet">
     <!-- Site Icon -->
-    <link rel="icon" type="image/x-icon" href="./img/ucas.png">
+    <link rel="icon" type="image/x-icon" href="./img/icon.ico">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/modal.css">
@@ -89,7 +89,7 @@
                         <a href="./assets/paper/atc19-liang/atc19-liang-slide.pdf" target="_blank"><i
                                 class="fa-regular fa-file-powerpoint"></i>&nbsp;Slides</a> |
                         <!-- <a data-modal-action="open" data-modal-target="atc19-liang-slide"><i
-                                class="fa-regular fa-file-powerpoint"></i>&nbsp;打开模态框</a> | -->
+                                class="fa-regular fa-file-powerpoint"></i>&nbsp;Open Modal</a> | -->
                         <a href="https://www.usenix.org/conference/atc19/presentation/liang" target="_blank"><i
                                 class="fa-solid fa-clapperboard"></i>&nbsp;Talk</a> |
                         <a href="https://github.com/Cognitive-SSD/Cognitive-SSD" target="_blank"><i
